--- a/quotation_styles.css
+++ b/quotation_styles.css
@@ -278,7 +278,115 @@ body {
 }
 
 
-.footer {
-
+.footer p {
+  margin-bottom: 5px;
+  font-size: 10px; /* Adjust the font size as necessary */
 }
 
+.contact-info {
+  font-size: 16px; /* Adjusts the font size for consistency */
+  line-height: 1.5; /* Improves readability and spacing */
+}
+
+.phone-icon {
+  width: 16px; /* Adjust the size of the phone icon */
+  height: 16px;
+  margin-right: 8px; /* Adds space between the icon and the text */
+  vertical-align: middle; /* Aligns the icon with the text */
+}
+
+.mail-icon {
+  width: 16px; /* Adjust the size of the mail icon */
+  height: 16px;
+  margin-right: 8px; /* Adds space between the icon and the text */
+  vertical-align: middle; /* Aligns the icon with the text */
+}
+
+.contact-info p {
+  margin: 10px 0; /* Adjusts spacing between paragraphs */
+}
+
+.contact-info p:nth-child(2) {
+  color: blue; /* Applies the blue color only to the second paragraph (email) */
+}
+
+
+.signature-section-container{
+  display: flex;
+  flex-direction: row;
+  justify-content:flex-start;
+  gap: 15%;
+  margin-top: 10mm;
+  padding: 10px;
+}
+
+.mail-icon{
+  width: 600px;
+  height: 40000px;
+}
+.signature-section{
+  padding: 0px 0px -10px 0px;  
+}
+
+.signature-section-container h3{
+  margin-bottom: 1px;
+}
+
+.signature-space-conforme{
+  border: 1px solid #CCCCCC;
+  padding: 10px 10px 0px 20px;
+  width: 45%;
+  margin-top: -12px;
+  border-radius: 8px;
+}
+
+.signature-space-conforme p{
+  padding-top: 5px;
+}
+
+.customer-signature-line p{
+  margin-top: 30px;
+  width: 300px;
+}
+
+.customer-signature-line-input input{
+  width: 250px;
+}
+
+
+.signature-input{
+  margin-top: -50px;
+  padding: 10px;
+  margin-bottom: 4mm;
+  height: 2px;
+}
+
+.conforme input{
+  border: none;
+  border-bottom: 1px solid; 
+  background-color: #f0f0f0;
+  padding: 1mm;
+  height: 2mm;
+}
+
+
+#date{
+  width:50mm;
+}
+
+
+.signature-section h3{ 
+  margin-bottom: 20px;
+}
+
+.signature-section p, .conforme p{ 
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
+
+
+.privacy{
+  text-align: center;
+  color: blue;
+  margin-top: 20px;
+}
